--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <a href="index.html"><div class="logo" title="Leocontigo.cl"></div></a>
        <div class="menu">
        <ul>
-           <li><a class="activo" href="http://www.leocontigo.cl">Inicio</a></li>
+           <li><a class="activo" href="https://felipeavr.github.io/leocontigo">Inicio</a></li>
            <li><a href="nosotros.html">Nosotros</a></li>
            <li><a href="talleres.html">Talleres</a></li>
            <li><a href="contacto.html">Contacto</a></li>
