--- a/resenas.html
+++ b/resenas.html
@@ -73,7 +73,7 @@
    <div class="contenedor ">
        <div class="menubar"> <div class="botonmenu"><div class="treline"></div></div>
        <div class="barra">
-           <a href="index.html"><div class="logo" title="Leocontigo.cl"></div></a>
+           <a href="https://felipeavr.github.io/leocontigo"><div class="logo" title="Leocontigo.cl"></div></a>
        <div class="menu">
        <ul>
            <li><a href="https://felipeavr.github.io/leocontigo/">Inicio</a></li>
