--- a/nosotros.html
+++ b/nosotros.html
@@ -72,7 +72,7 @@
        <div class="logo"></div>
        <div class="menu">
        <ul>
-           <li><a href="https://felipeavr.github.io/leocontigo/">Inicio</a></li>
+           <li><a href="../leocontigo/index.html">Inicio</a></li>
            <li><a class="activo" href="nosotros.html">Nosotros</a></li>
            <li><a href="talleres.html">Talleres</a></li>
            <li><a href="contacto.html">Contacto</a></li>
