--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
    <div class="contenedor">
        <div class="menubar"><div class="botonmenu"><div class="treline"></div></div>
        <div class="barra">
-        <a href="index.html"><div class="logo" title="Leocontigo.cl"></div></a>
+        <a href="../leocontigo/index.html"><div class="logo" title="Leocontigo.cl"></div></a>
        <div class="menu">
        <ul>
            <li><a class="activo" href="https://felipeavr.github.io/leocontigo">Inicio</a></li>
