--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ La Neurosiquiatra infanto juvenil y escritora de ya varias publicaciones sobre e
                <div class="book">
                   <div id="concurso">Ganador de Concurso</div>
                   <div class="fotolibro2">
-                      <a href="images1/image-51.jpg" data-lightbox="image-51" ><img src="images/image-51.jpg" alt="Leocontigo" title="Ganador 4to concurso de Leo contigo"></a>
+                      <a href="images1/image-51.jpg" data-lightbox="image-51" ><img src="images1/image-51.jpg" alt="Leocontigo" title="Ganador 4to concurso de Leo contigo"></a>
                       
                   </div>
                    <p class="concutext" >Felicitamos a los ganadores del concurso.<br>
