--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ La Neurosiquiatra infanto juvenil y escritora de ya varias publicaciones sobre e
                    
                     <div class="cabresbl"><p id="pcabres">Reseñas</p></div>
                     
-                    <a href="../resenas/resenas_paraquenomeolvides.html"><div class="listar">
+                    <a href="/resenas/resenas_paraquenomeolvides.html"><div class="listar">
                     <div class="nume"><img src="images1/paraqueno.jpg" alt="Reseña Para que no me olvides" title="Reseña Para que no me olvides"   ></div>
                        <div class="tlres">Para que no me olvides</div>  
                         </div></a>
