--- a/talleres.html
+++ b/talleres.html
@@ -77,7 +77,7 @@
               <div class="cabecera_es">
                <p id="title_es">Talleres y Charlas</p>
                 <div class="shared_tall">
-                      <div class="fb-share-button" data-href="http://www.leocontigo.cl/talleres.html" data-layout="button_count" data-mobile-iframe="true"></div>
+                      <div class="fb-share-button" data-href="https://felipeavr.github.io/leocontigo/" data-layout="button_count" data-mobile-iframe="true"></div>
                   </div>
                   
               </div>
