--- a/contacto.html
+++ b/contacto.html
@@ -40,7 +40,7 @@
        <div class="logo"></div>
        <div class="menu">
        <ul>
-           <li><a href="http://www.leocontigo.cl">Inicio</a></li>
+           <li><a href="../leocontigo/">Inicio</a></li>
            <li><a href="nosotros.html">Nosotros</a></li>
            <li><a href="talleres.html">Talleres</a></li>
            <li><a class="activo" href="contacto.html">Contacto</a></li>
