--- a/escritores.html
+++ b/escritores.html
@@ -54,7 +54,7 @@
    <div class="contenedor ">
        <div class="menubar"> <div class="botonmenu"><div class="treline"></div></div>
        <div class="barra">
-       <div class="logo"></div>
+       <a href="../leocontigo"><div class="logo"></div></a>
        <div class="menu">
        <ul>
            <li><a href="leocontigo.html">Inicio</a></li>
