--- a/escritores.html
+++ b/escritores.html
@@ -57,7 +57,7 @@
        <a href="../leocontigo"><div class="logo"></div></a>
        <div class="menu">
        <ul>
-           <li><a href="leocontigo.html">Inicio</a></li>
+           <li><a href="../leocontigo/">Inicio</a></li>
            <li><a href="nosotros.html">Nosotros</a></li>
            <li><a href="talleres.html">Talleres</a></li>
            <li><a href="contacto.html">Contacto</a></li>
