--- a/talleres.html
+++ b/talleres.html
@@ -59,7 +59,7 @@
        <div class="logo"></div>
        <div class="menu">
        <ul>
-           <li><a href="http://www.leocontigo.cl">Inicio</a></li>
+           <li><a href="../leocontigo/">Inicio</a></li>
            <li><a href="nosotros.html">Nosotros</a></li>
            <li><a class="activo" href="talleres.html">Talleres</a></li>
            <li><a href="contacto.html">Contacto</a></li>
