--- a/resenas.html
+++ b/resenas.html
@@ -76,7 +76,7 @@
            <a href="https://felipeavr.github.io/leocontigo"><div class="logo" title="Leocontigo.cl"></div></a>
        <div class="menu">
        <ul>
-           <li><a href="https://felipeavr.github.io/leocontigo/">Inicio</a></li>
+           <li><a href="../leocontigo/">Inicio</a></li>
            <li><a href="nosotros.html">Nosotros</a></li>
            <li ><a href="talleres.html">Talleres</a></li>
            <li><a href="contacto.html">Contacto</a></li>
