--- a/galeria.html
+++ b/galeria.html
@@ -54,10 +54,10 @@
    <div class="contenedor ">
        <div class="menubar"><div class="botonmenu"><div class="treline"></div></div>
        <div class="barra">
-       <div class="logo"></div>
+       <a href="../leocontigo/"><div class="logo"></div></a>
        <div class="menu">
        <ul>
-           <li><a href="http://www.leocontigo.cl">Inicio</a></li>
+           <li><a href="../leocontigo/">Inicio</a></li>
            <li><a href="nosotros.html">Nosotros</a></li>
            <li><a href="talleres.html">Talleres</a></li>
            <li><a href="contacto.html">Contacto</a></li>
