--- a/servicios.html
+++ b/servicios.html
@@ -53,7 +53,7 @@
    <div class="contenedor ">
        <div class="menubar"> <div class="botonmenu"><div class="treline"></div></div>
        <div class="barra">
-       <div class="logo"></div>
+       <a href="../leocontigo/"><div class="logo"></div></a>
        <div class="menu">
        <ul>
            <li><a href="../leocontigo/">Inicio</a></li>
